[package]
name = "quadrant"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/quadrant"
description = "A small utility library for sampling matrices."
keywords = ["direction", "sampling", "matrix", "utility"]
categories = ["algorithms", "data-structures", "science"]

[dependencies]
nav = "0.1.5"
ndarray = "0.16.1"
